KCWA-772 Style fix for FF, vertical align search button icon

--- a/gui/src/components/presentation/styles/SearchBar.less
+++ b/gui/src/components/presentation/styles/SearchBar.less
@@ -23,9 +23,8 @@
             color: @neutralColor6;
             text-overflow: ellipsis;
             .header-font(400, 28px, 28px);
-            height: 28px;
+            height: 36px;
             padding-left: 15px;
-            padding-bottom: 3px;
             &:focus {
                 outline: none;
             }
@@ -39,6 +38,7 @@
             color: @neutralColor6;
             .icon-search(28px);
             padding-right: 15px;
+            padding-top: 3px;
         }
     }
 }
